<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView
			android:padding="16dp"
			android:id="@+id/note_delete_confirm_message"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:text="@string/ask_delete_note_folder" />
		<Button
			android:id="@+id/note_cancel_delete_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/note_delete_confirm_message"
			app:layout_constraintStart_toStartOf="parent"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:minWidth="0dp"
			android:text="@string/cancel" />
		<Button
			android:id="@+id/note_confirm_delete_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/note_delete_confirm_message"
			app:layout_constraintEnd_toEndOf="parent"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:minWidth="0dp"
			android:text="@string/delete" />
	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
