<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/bottomSheetDialogMainContentHeight">
		
		<EditText
			android:id="@+id/file_name_edit_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginStart="6dp"
			android:layout_marginLeft="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginRight="6dp"
			android:inputType="text|textNoSuggestions"
			android:importantForAutofill="no"
			android:hint="@string/file_name"
			tools:targetApi="o" />
		<TextView
			android:id="@+id/current_dir_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="6dp"
			android:layout_marginLeft="6dp"
			android:layout_marginEnd="6dp"
			android:layout_marginRight="6dp"
			android:paddingBottom="8dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/file_name_edit_text" />
		<android.support.v7.widget.RecyclerView
			android:padding="16dp"
			android:id="@+id/files_recycler_view"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:clipToPadding="false"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/current_dir_text_view"
			app:layout_constraintBottom_toTopOf="@+id/select_button"
			app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
		<Button
			android:id="@+id/cancel_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:minWidth="0dp"
			android:text="@string/cancel" />
		<Button
			android:id="@+id/select_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:minWidth="0dp"
			android:text="@string/select" />
	</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
