<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:clickable="true"
	android:focusable="true"
	android:foreground="?attr/selectableItemBackground"
	android:orientation="horizontal"
	android:paddingLeft="@dimen/taskHorizontalMargin"
	android:paddingTop="@dimen/taskVerticalMargin"
	android:paddingRight="@dimen/taskHorizontalMargin"
	android:paddingBottom="@dimen/taskVerticalMargin"
	tools:background="@android:color/white">
	
	<ImageView
		android:id="@+id/task_reorder_handle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:contentDescription="@string/reorder"
		app:layout_constraintBottom_toBottomOf="@id/task_completed_checkbox"
		app:layout_constraintTop_toTopOf="@id/task_completed_checkbox"
		app:srcCompat="@drawable/ic_reorder_black_24dp" />
	
	<CheckBox
		android:id="@+id/task_completed_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:paddingEnd="6dp"
		android:paddingRight="6dp"
		android:theme="@style/ItemTask.CheckBox"
		app:layout_constraintStart_toEndOf="@id/task_reorder_handle" />
	
	<EditText
		android:id="@+id/task_dummy_title_edit_text"
		style="@style/ItemTask.Title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:hint="@string/empty"
		android:importantForAutofill="no"
		android:inputType="text"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="@id/task_completed_checkbox"
		app:layout_constraintEnd_toStartOf="@id/task_delete_button"
		app:layout_constraintStart_toEndOf="@id/task_completed_checkbox"
		app:layout_constraintTop_toTopOf="@id/task_completed_checkbox"
		tools:targetApi="o" />
	
	<ImageButton
		android:id="@+id/task_delete_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@android:color/transparent"
		android:contentDescription="@string/delete"
		app:layout_constraintBottom_toBottomOf="@id/task_completed_checkbox"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@id/task_completed_checkbox"
		app:srcCompat="@drawable/ic_cross_black_24dp" />
	
	<ImageButton
		android:id="@+id/task_show_details_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		app:layout_constraintBottom_toBottomOf="@id/task_completed_checkbox"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@id/task_completed_checkbox"
		android:background="@android:color/transparent"
		android:contentDescription="@string/show_task_details"
		app:srcCompat="@drawable/ic_plus_black_24dp" />
	
	<id.pineapple.anytask.DefocusableEditText
		android:id="@+id/task_title_edit_text"
		style="@style/ItemTask.Title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:hint="@string/empty"
		android:importantForAutofill="no"
		android:inputType="textMultiLine|textAutoCorrect|textCapSentences|textNoSuggestions"
		app:layout_constraintStart_toStartOf="@id/task_dummy_title_edit_text"
		app:layout_constraintEnd_toEndOf="@id/task_dummy_title_edit_text"
		app:layout_constraintTop_toTopOf="@id/task_dummy_title_edit_text"
		tools:text="Title"
		tools:targetApi="o" />
	
	<TextView
		android:id="@+id/task_info_text_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="@id/task_dummy_title_edit_text"
		app:layout_constraintEnd_toEndOf="@id/task_dummy_title_edit_text"
		app:layout_constraintTop_toBottomOf="@id/task_title_edit_text"
		android:textColor="?attr/textColorDisabled"
		tools:text="Info" />
	
	<TextView
		android:id="@+id/task_note_text_view"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="@id/task_dummy_title_edit_text"
		app:layout_constraintEnd_toEndOf="@id/task_dummy_title_edit_text"
		app:layout_constraintTop_toBottomOf="@id/task_info_text_view"
		android:maxLines="1"
		android:ellipsize="end"
		android:scrollHorizontally="true"
		android:textColor="?attr/textColorLink"
		tools:text="Note" />
</android.support.constraint.ConstraintLayout>
